--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
@@ -23,6 +22,4 @@ permalink: pretty
 gems: [jekyll-paginate]
 
 paginate: 10
-=======
-theme: jekyll-theme-merlot
->>>>>>> 0cc7da761606e66d4867ab32ce45338fd3a35f1d
+theme: jekyll-theme-midnight
